<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_crime">New Crime</string>
    <string name="new_crime_description">Adding new crime</string>
    <string name="crime_list">Crime List</string>
    <string name="save_crime">Save Crime</string>
    <string name="save_new_crime_description">Save new crime button</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="delete_crime_description">Delete crime button</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

</resources>